--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "orchid/platform",
+    "name": "hocvt/platform",
     "description": "Platform for back-office applications, admin panel or CMS your Laravel app.",
     "keywords": [
         "framework",
